self-hosting/kubernetes/manifests/main/api.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omnivore-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - api.omnivore.example.com
      secretName: api-omnivore-example-ingress-tls
  rules:
    - host: api.omnivore.example.com
      http:
        paths:
          - backend:
              service:
                name: omnivore-api
                port:
                  number: 8080
            path: /
            pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  name: omnivore-api
  labels:
    app: omnivore
    component: api
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: omnivore
    component: api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: omnivore-api
  labels:
    app: omnivore
    component: api
spec:
  selector:
    matchLabels:
      app: omnivore
      component: api
  template:
    metadata:
      labels:
        app: omnivore
        component: api
    spec:
      containers:
        - name: api
          image: docker.io/yourusername/omnivore-api
          ports:
            - containerPort: 8080
          livenessProbe:
            exec:
              command: ["nc", "-z", "localhost", "8080"]
            initialDelaySeconds: 15
            periodSeconds: 15
            timeoutSeconds: 90
